crates/ktc-parser/tests/snapshots/corpus__diag_missing_paren.snap
---
source: crates/ktc-parser/tests/corpus.rs
expression: "fun main() {\n    println(1 + 2\n    val ok = 3\n}\n"
---
# ast
fun main()
  body=block

# diagnostics
[E0001] Error expected `)` @35..38
