crates/ktc-parser/tests/snapshots/corpus__diag_top_level_garbage.snap
---
source: crates/ktc-parser/tests/corpus.rs
expression: "+ + +\nfun main() { println(1) }\n"
---
# ast
fun main()
  body=block
    stmt-expr
      call (#args=1)
        callee=
          path println
        arg[0]=
          int 1

# diagnostics
[E0002] Error expected top-level declaration @0..1
