crates/ktc-parser/tests/snapshots/corpus__hello.snap
---
source: crates/ktc-parser/tests/corpus.rs
expression: "fun main() {\n    println(1 + 1)\n}\n"
---
# ast
fun main()
  body=block
    stmt-expr
      call (#args=1)
        callee=
          path println
        arg[0]=
          binop +
            int 1
            int 1
